# qopqdp

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.html  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  index.html  installation.txt  params.json  qop.tar
examples/: Makefile.am  Makefile.in  asqtad_eigcg.c  asqtad_force_bench.c  asqtad_invert_bench.c  asqtad_test.c  dw_invert_bench.c  hisq_force_bench.c  hisq_invert_bench.c  imp_gauge_force_bench.c  imp_gauge_heatbath_bench.c  test_common.c  test_common.h  test_reunit_utils.c  wilson_force_bench.c  wilson_invert_bench.c  wilson_mg_test.c  wilson_test.c
include/: Makefile.am  Makefile.in  asqtad_action.h  generic_D.h  generic_V.h  generic_vD.h  hisq_action.h  makegeneric  makeheaders  makespecific  qop.h  qop_config.h.in  qop_d.h  qop_d1.h  qop_d1_color_generic.h  qop_d1_generic.h  qop_d1_internal.h  qop_d1_internal_generic.h  qop_d1_precision_generic.h  qop_d2.h  qop_d2_color_generic.h  qop_d2_generic.h  qop_d2_internal.h  qop_d2_internal_generic.h  qop_d2_precision_generic.h  qop_d3.h  qop_d3_color_generic.h  qop_d3_generic.h  qop_d3_internal.h  qop_d3_internal_generic.h  qop_d3_precision_generic.h  qop_d_generic.h  qop_d_internal.h  qop_d_internal_generic.h  qop_df1.h  qop_df1_color_generic.h  qop_df2.h  qop_df2_color_generic.h  qop_df3.h  qop_df3_color_generic.h  (+47 more)
lib/: Makefile.am  Makefile.in  asqtad.c  asqtad_action.h  asqtad_dslash.c  asqtad_dslash_d.c  asqtad_dslash_f.c  asqtad_dslash_p.c  asqtad_force.c  asqtad_force_asvec_p.c  asqtad_force_d.c  asqtad_force_f.c  asqtad_force_fnmat1_p.c  asqtad_force_fnmat2_p.c  asqtad_force_fnmat3_p.c  asqtad_force_fnmat_d.c  asqtad_force_fnmat_f.c  asqtad_force_fnmat_p.c  asqtad_force_p.c  asqtad_invert.c  asqtad_invert_d.c  asqtad_invert_f.c  asqtad_invert_p.c  asqtadp.c  common.c  common_d.c  common_f.c  common_p.c  dw_dslash.c  dw_dslash_d.c  dw_dslash_f.c  dw_dslash_p.c  dw_invert.c  dw_invert_d.c  dw_invert_f.c  dw_invert_p.c  gauge_deriv_p.c  hisq_force.c  hisq_force_d.c  hisq_force_f.c  (+81 more)
lib/mg/: bicgstab_p.c  cgls_p.c  gcr_p.c  mg.c  mg_dslash_p.c  mg_p.c  solvers.h  vcycle_p.c  wilson_mg_p.c  wilson_ops_p.c
lib/pcstubs/: asqtad_dslash_d1.c  asqtad_dslash_d2.c  asqtad_dslash_d3.c  asqtad_dslash_dn.c  asqtad_dslash_f1.c  asqtad_dslash_f2.c  asqtad_dslash_f3.c  asqtad_dslash_fn.c  asqtad_force_asvec_d1.c  asqtad_force_asvec_d2.c  asqtad_force_asvec_d3.c  asqtad_force_asvec_dn.c  asqtad_force_asvec_f1.c  asqtad_force_asvec_f2.c  asqtad_force_asvec_f3.c  asqtad_force_asvec_fn.c  asqtad_force_d1.c  asqtad_force_d2.c  asqtad_force_d3.c  asqtad_force_dn.c  asqtad_force_f1.c  asqtad_force_f2.c  asqtad_force_f3.c  asqtad_force_fn.c  asqtad_force_fnmat_d1.c  asqtad_force_fnmat_d2.c  asqtad_force_fnmat_d3.c  asqtad_force_fnmat_dn.c  asqtad_force_fnmat_f1.c  asqtad_force_fnmat_f2.c  asqtad_force_fnmat_f3.c  asqtad_force_fnmat_fn.c  asqtad_invert_d1.c  asqtad_invert_d2.c  asqtad_invert_d3.c  asqtad_invert_dn.c  asqtad_invert_f1.c  asqtad_invert_f2.c  asqtad_invert_f3.c  asqtad_invert_fn.c  (+261 more)
qop/: qcdoc.txt  qop.h  qop_qdp.h
