include_HEADERS = \
qop.h \
qop_d2.h \
qop_d2_color_generic.h \
qop_d2_generic.h \
qop_d2_internal.h \
qop_d2_internal_generic.h \
qop_d2_precision_generic.h \
qop_d3.h \
qop_d3_color_generic.h \
qop_d3_generic.h \
qop_d3_internal.h \
qop_d3_internal_generic.h \
qop_d3_precision_generic.h \
qop_df2.h \
qop_df2_color_generic.h \
qop_df3.h \
qop_df3_color_generic.h \
qop_f2.h \
qop_f2_color_generic.h \
qop_f2_generic.h \
qop_f2_internal.h \
qop_f2_internal_generic.h \
qop_f2_precision_generic.h \
qop_f3.h \
qop_f3_color_generic.h \
qop_f3_generic.h \
qop_f3_internal.h \
qop_f3_internal_generic.h \
qop_f3_precision_generic.h \
qop_int.h \
qop_internal.h \
qop_qdp.h

EXTRA_DIST = \
qop_pc.h qop_poc.h qop_pc_internal.h \
generic_D.h generic_V.h generic_vD.h \
asqtad_action.h hisq_action.h
