include_HEADERS = \
qop.h \
qop_d.h \
qop_d_generic.h \
qop_d_internal.h \
qop_d_internal_generic.h \
qop_d1.h \
qop_d1_color_generic.h \
qop_d1_generic.h \
qop_d1_internal.h \
qop_d1_internal_generic.h \
qop_d1_precision_generic.h \
qop_d2.h \
qop_d2_color_generic.h \
qop_d2_generic.h \
qop_d2_internal.h \
qop_d2_internal_generic.h \
qop_d2_precision_generic.h \
qop_d3.h \
qop_d3_color_generic.h \
qop_d3_generic.h \
qop_d3_internal.h \
qop_d3_internal_generic.h \
qop_d3_precision_generic.h \
qop_dn.h \
qop_dn_color_generic.h \
qop_dn_generic.h \
qop_dn_internal.h \
qop_dn_internal_generic.h \
qop_dn_precision_generic.h \
qop_f.h \
qop_f_generic.h \
qop_f_internal.h \
qop_f_internal_generic.h \
qop_df1.h \
qop_df1_color_generic.h \
qop_df2.h \
qop_df2_color_generic.h \
qop_df3.h \
qop_df3_color_generic.h \
qop_dfn.h \
qop_dfn_color_generic.h \
qop_f1.h \
qop_f1_color_generic.h \
qop_f1_generic.h \
qop_f1_internal.h \
qop_f1_internal_generic.h \
qop_f1_precision_generic.h \
qop_f2.h \
qop_f2_color_generic.h \
qop_f2_generic.h \
qop_f2_internal.h \
qop_f2_internal_generic.h \
qop_f2_precision_generic.h \
qop_f3.h \
qop_f3_color_generic.h \
qop_f3_generic.h \
qop_f3_internal.h \
qop_f3_internal_generic.h \
qop_f3_precision_generic.h \
qop_fn.h \
qop_fn_color_generic.h \
qop_fn_generic.h \
qop_fn_internal.h \
qop_fn_internal_generic.h \
qop_fn_precision_generic.h \
qop_int.h \
qop_internal.h \
qop_qdp.h \
qop_mg.h \
qop_mg_internal.h

nobase_include_HEADERS = qop_config.h

EXTRA_DIST = \
qop_p.h qop_p_internal.h \
qop_pc.h qop_poc.h qop_pc_internal.h \
generic_D.h generic_V.h generic_vD.h \
asqtad_action.h hisq_action.h
